<resources>
    <string name="app_name">nasaApp</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="Button1">Theme 1</string>
    <string name="Button2">Theme 2</string>
    <string name="change_theme">Change theme</string>

    //Tabs
    <string name="earth_tab_text">Earth</string>
    <string name="mars_tab_text">Mars</string>
    <string name="solar_tab_text">Solar</string>


</resources>