<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_view_earth"
        android:icon="@drawable/ic_earth"
        android:title="@string/earth_tab_text"/>
    <item
        android:id="@+id/bottom_view_mars"
        android:icon="@drawable/ic_mars"
        android:title="@string/mars_tab_text"/>
    <item
        android:id="@+id/bottom_view_solar"
        android:icon="@drawable/ic_solar_system"
        android:title="@string/solar_tab_text" />
    <item
        android:id="@+id/bottom_view_save"
        android:icon="@drawable/baseline_save_24"
        android:title="Save" />
    <item
        android:id="@+id/bottom_view_share"
        android:icon="@drawable/baseline_share_24"
        android:title="Share" />
</menu>
